--- a/Pranctice_4_KM_02__viktoria.ipynb
+++ b/Pranctice_4_KM_02__viktoria.ipynb
@@ -84,7 +84,19 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "products_list = [29.25, 48.99, 99.98, 124.65, 214.30, 543.90, 799.85]\n",
+        "lenght = len(products_list)\n",
+        "new_price_list = []\n",
+        "discount_list = []\n",
+        "print('Discount table: \\n')\n",
+        "for i in range(lenght):\n",
+        "    a=round(products_list[i]*0.4, 2)\n",
+        "    discount_list.append (a)\n",
+        "    b=round(products_list[i]*0.6, 2)\n",
+        "    new_price_list.append (b)\n",
+        "    print(str(products_list[i]) +' '+ str(new_price_list[i]) + ' ' + str(discount_list[i]), '\\n')"
+      ]
     },
     {
       "source": [
@@ -122,10 +134,36 @@
         "id": "Nv66Jkkpf-sI"
       },
       "source": [
-        ""
+        "a=''\n",
+        "words_list=[]\n",
+        "while True:\n",
+        "    a = str(input('Write the word(s),(leave empty if you want to stop): '))\n",
+        "    if a=='':\n",
+        "        break\n",
+        "    else:\n",
+        "        words_list.append(a)\n",
+        "lenght=len(words_list)\n",
+        "if lenght==1:\n",
+        "    print(str(words_list[0]))\n",
+        "elif lenght==2:\n",
+        "    print(str(words_list[0])+' ' + 'and' + ' ' +str(words_list[1]))\n",
+        "else:\n",
+        "    words_list.insert(-1, 'and ')\n",
+        "    for i in range (0, lenght+1):\n",
+        "        if i==lenght-1 or i==lenght:\n",
+        "          print(words_list[i], end='')\n",
+        "        else:\n",
+        "          print(str(words_list[i]+ ', ') , end='')\n"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ]
 }
