--- a/Practice_5_KM-02_.ipynb
+++ b/Practice_5_KM-02_.ipynb
@@ -93,16 +93,17 @@
         "for char in secondPhraseChars:\n",
         "    if char.isalpha():\n",
         "        filteredSecondChars.append(char)\n",
-        "\n",
-        "canCreatePhrase = all(char in filteredFirstChars for char in filteredSecondChars)\n",
-        "\n",
-        "print(\"First phrase char list\")\n",
+        "filteredFirstChars =set(filteredFirstChars)\n",
+        "filteredSecondChars =set(filteredSecondChars)\n",
+        "print(\"First phrase char set\")\n",
         "print(filteredFirstChars)\n",
-        "print(\"Second phrase char list\")\n",
+        "print(\"Second phrase char set\")\n",
         "print(filteredSecondChars)\n",
         "\n",
-        "print(\"Can create second phrase from first:\")\n",
-        "print(canCreatePhrase)\n"
+        "if filteredSecondChars==filteredSecondChars & filteredFirstChars:\n",
+        "    print('You can create a phrase')\n",
+        "else:\n",
+        "    print('You can not create a phrase')\n"
       ]
     },
     {
